LoyaltyApp/force-app/main/default/objects/Loyalty_Program_Member__c/Loyalty_Program_Member__c.object-meta.xml
<CustomObject>
    <label>Loyalty Program Member</label>
    <nameField>
        <label>Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loyalty Program Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>