LoyaltyApp/force-app/main/default/objects/Loyalty_Program_Member__c/fields/Loyalty_Level__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Level__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Loyalty Level</label>
    <referenceTo>Loyalty_Level__c</referenceTo>
    <relationshipName>Program_Members</relationshipName>
    <type>Lookup</type>
</CustomField>