LoyaltyApp/force-app/main/default/objects/Loyalty_Program_Member__c/fields/Loyalty_Program__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Program__c</fullName>
    <label>Loyalty Program</label>
    <referenceTo>Loyalty_Program__c</referenceTo>
    <relationshipName>Program_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>