LoyaltyApp/force-app/main/default/objects/Loyalty_Program_Member__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <label>Member</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Program_Members</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>