LoyaltyApp/force-app/main/default/objects/Loyalty_Program_Member__c/fields/Member_Code__c.field-meta.xml
<CustomField>
    <fullName>Member_Code__c</fullName>
    <displayFormat>MEMBER-{YYYY}{MM}-{0000}</displayFormat>
    <label>Member Code</label>
    <type>AutoNumber</type>
</CustomField>