LoyaltyApp/force-app/main/default/objects/Loyalty_Program_Member__c/recordTypes/Card_Program_Member.recordType-meta.xml
<RecordType>
    <fullName>Card_Program_Member</fullName>
    <active>true</active>
    <label>Card Program Member</label>
</RecordType>