LoyaltyApp/force-app/main/default/objects/Loyalty_Program_Member__c/recordTypes/Hybrid_Program_Member.recordType-meta.xml
<RecordType>
    <fullName>Hybrid_Program_Member</fullName>
    <active>true</active>
    <label>Hybrid Program Member</label>
</RecordType>