LoyaltyApp/force-app/main/default/objects/Loyalty_Program_Member__c/recordTypes/Paid_Program_Member.recordType-meta.xml
<RecordType>
    <fullName>Paid_Program_Member</fullName>
    <active>true</active>
    <label>Paid Program Member</label>
</RecordType>