LoyaltyApp/force-app/main/default/objects/Loyalty_Program_Member__c/recordTypes/Partnered_Program_Member.recordType-meta.xml
<RecordType>
    <fullName>Partnered_Program_Member</fullName>
    <active>true</active>
    <label>Partnered Program Member</label>
</RecordType>