LoyaltyApp/force-app/main/default/objects/Loyalty_Program_Member__c/recordTypes/Point_Program_Member.recordType-meta.xml
<RecordType>
    <fullName>Point_Program_Member</fullName>
    <active>true</active>
    <label>Point Program Member</label>
</RecordType>