LoyaltyApp/force-app/main/default/objects/Loyalty_Program_Member__c/recordTypes/Spend_Program_Member.recordType-meta.xml
<RecordType>
    <fullName>Spend_Program_Member</fullName>
    <active>true</active>
    <label>Spend Program Member</label>
</RecordType>