LoyaltyApp/force-app/main/default/objects/Loyalty_Program_Member__c/recordTypes/Tiered_Program_Member.recordType-meta.xml
<RecordType>
    <fullName>Tiered_Program_Member</fullName>
    <active>true</active>
    <label>Tiered Program Member</label>
</RecordType>