LoyaltyApp/force-app/main/default/objects/Loyalty_Program_Member__c/recordTypes/Value_Program_Member.recordType-meta.xml
<RecordType>
    <fullName>Value_Program_Member</fullName>
    <active>true</active>
    <label>Value Program Member</label>
</RecordType>